--- a/README.org
+++ b/README.org
@@ -190,6 +190,17 @@ ws.addEventListener('message', event => {
 }
 #+END_SRC
 
+***** Example
+****** curl
+#+BEGIN_SRC sh
+curl 'http://localhost:8080/stats'
+#+END_SRC
+
+****** JavaScript
+#+BEGIN_SRC js
+await fetch('http://localhost:8080/stats').then(res => res.json())
+#+END_SRC
+
 *** Private
 **** JSON Schema验证
 通过设置环境变量 =PUBSUB_JSON_VALIDATION=true= 可开启publish的JSON Schema验证功能.
