feat: rename stats to metrics
BREAKING CHANGE: /stats => /metrics

--- a/README.org
+++ b/README.org
@@ -178,8 +178,8 @@ ws.addEventListener('message', event => {
 })
 #+END_SRC
 
-**** 统计信息
-=GET /stats=
+**** metrics
+=GET /metrics=
 
 输出JSON:
 #+BEGIN_SRC ts
@@ -193,12 +193,12 @@ ws.addEventListener('message', event => {
 ***** Example
 ****** curl
 #+BEGIN_SRC sh
-curl 'http://localhost:8080/stats'
+curl 'http://localhost:8080/metrics'
 #+END_SRC
 
 ****** JavaScript
 #+BEGIN_SRC js
-await fetch('http://localhost:8080/stats').then(res => res.json())
+await fetch('http://localhost:8080/metrics').then(res => res.json())
 #+END_SRC
 
 *** Private
