feat: support ws heartbeat

--- a/README.org
+++ b/README.org
@@ -133,7 +133,7 @@ fetch(`http://localhost:8080/pubsub/${id}`, {
 通过SSE订阅特定频道.
 id用于标识频道.
 
-使用SSE时, 强烈建议服务器提供 HTTP/2 协议的反向代理.
+当客户端主要是浏览器时, 强烈建议服务器提供 HTTP/2 协议的反向代理.
 
 如果开启基于token的访问控制, 则可能需要在Querystring提供具有read权限的token:
 =/pubsub/<id>?token=<token>=
@@ -170,8 +170,16 @@ id用于标识频道.
 如果开启基于token的访问控制, 则可能需要在Querystring提供具有read权限的token:
 =/pubsub/<id>?token=<token>=
 
-注: 如果可以通过SSE订阅, 则推荐使用SSE订阅.
-SSE在HTTP/2协议下可以多路复用, 而WebSocket会给每个连接单独开启新的连接.
+***** heartbeat
+通过环境变量  =PUBSUB_WS_HEARTBEAT_INTERVAL= 可以设置WS心跳包(ping/pong帧)的发送间隔, 单位为毫秒.
+在默认情况下, 服务不会发送心跳包,
+半开连接的检测依赖于服务端和客户端的运行平台的TCP Keepalive配置.
+
+当 =PUBSUB_WS_HEARTBEAT_INTERVAL= 大于零时,
+服务会通过WS的ping/pong帧按间隔发送心跳包.
+
+客户端若要实现半开连接检测, 可以定期发送空白字符串到服务端, 以判断连接是否正常.
+为防止带宽滥用, 如果客户端发送的不是空白字符串, 则服务端会主动关闭连接.
 
 ***** Example
 ****** websocat
