--- a/README.org
+++ b/README.org
@@ -171,12 +171,12 @@ id用于标识频道.
 =/pubsub/<id>?token=<token>=
 
 ***** heartbeat
-通过环境变量  =PUBSUB_WS_HEARTBEAT_INTERVAL= 可以设置WS心跳包(ping/pong帧)的发送间隔, 单位为毫秒.
+通过环境变量  =PUBSUB_WS_HEARTBEAT_INTERVAL= 可以设置WS心跳包(ping帧)的发送间隔, 单位为毫秒.
 在默认情况下, 服务不会发送心跳包,
 半开连接的检测依赖于服务端和客户端的运行平台的TCP Keepalive配置.
 
 当 =PUBSUB_WS_HEARTBEAT_INTERVAL= 大于零时,
-服务会通过WS的ping/pong帧按间隔发送心跳包.
+服务会通过WS的ping帧按间隔发送心跳包.
 
 客户端若要实现半开连接检测, 可以定期发送空白字符串到服务端, 以判断连接是否正常.
 为防止带宽滥用, 如果客户端发送的不是空白字符串, 则服务端会主动关闭连接.
