feat: rename /api to /admin
BREAKING CHANGE: rename /api to /admin

--- a/README.org
+++ b/README.org
@@ -213,7 +213,7 @@ JSON验证仅用于验证, 不会重新序列化消息, 因此subscribe得到的
 可单独为id设置JSON Schema, 被设置的id将仅接受`Content-Type: application/json`请求.
 
 ****** 获取所有具有JSON Schema的频道id
-=GET /api/pubsub-with-json-schema=
+=GET /admin/pubsub-with-json-schema=
 
 获取所有具有JSON Schema的频道id, 返回由JSON表示的字符串数组 =string[]=.
 
@@ -222,12 +222,12 @@ JSON验证仅用于验证, 不会重新序列化消息, 因此subscribe得到的
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub-with-json-schema"
+  "http://localhost:8080/admin/pubsub-with-json-schema"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch('http://localhost:8080/api/pubsub-with-json-schema', {
+await fetch('http://localhost:8080/admin/pubsub-with-json-schema', {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -235,19 +235,19 @@ await fetch('http://localhost:8080/api/pubsub-with-json-schema', {
 #+END_SRC
 
 ****** 获取JSON Schema
-=GET /api/pubsub/<id>/json-schema=
+=GET /admin/pubsub/<id>/json-schema=
 
 ******* Example
 ******** curl
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub/$id/json-schema"
+  "http://localhost:8080/admin/pubsub/$id/json-schema"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/pubsub/${id}/json-schema`, {
+await fetch(`http://localhost:8080/admin/pubsub/${id}/json-schema`, {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -255,7 +255,7 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/json-schema`, {
 #+END_SRC
 
 ****** 设置JSON Schema
-=PUT /api/pubsub/<id>/json-schema=
+=PUT /admin/pubsub/<id>/json-schema=
 
 ******* Example
 ******** curl
@@ -265,12 +265,12 @@ curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
   --header "Content-Type: application/json" \
   --data "$JSON_SCHEMA" \
-  "http://localhost:8080/api/pubsub/$id/jsonschema"
+  "http://localhost:8080/admin/pubsub/$id/jsonschema"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/pubsub/${id}/json-schema`, {
+await fetch(`http://localhost:8080/admin/pubsub/${id}/json-schema`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -281,7 +281,7 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/json-schema`, {
 #+END_SRC
 
 ****** 移除JSON Schema
-=DELETE /api/pubsub/<id>/json-schema=
+=DELETE /admin/pubsub/<id>/json-schema=
 
 ******* Example
 ******** curl
@@ -289,12 +289,12 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/json-schema`, {
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub/$id/json-schema"
+  "http://localhost:8080/admin/pubsub/$id/json-schema"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/pubsub/${id}/json-schema`, {
+await fetch(`http://localhost:8080/admin/pubsub/${id}/json-schema`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -322,7 +322,7 @@ PubSub提供两种访问控制策略, 可以一并使用.
 
 ****** 黑名单
 ******* 获取黑名单
-=GET /api/blacklist=
+=GET /admin/blacklist=
 
 获取位于黑名单中的所有频道id, 返回JSON表示的字符串数组 =string[]=.
 
@@ -331,12 +331,12 @@ PubSub提供两种访问控制策略, 可以一并使用.
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/blacklist"
+  "http://localhost:8080/admin/blacklist"
 #+END_SRC
 
 ********* fetch
 #+BEGIN_SRC js
-await fetch('http://localhost:8080/api/blacklist', {
+await fetch('http://localhost:8080/admin/blacklist', {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -344,7 +344,7 @@ await fetch('http://localhost:8080/api/blacklist', {
 #+END_SRC
 
 ******* 添加黑名单
-=PUT /api/blacklist/<id>=
+=PUT /admin/blacklist/<id>=
 
 将特定频道加入黑名单.
 
@@ -354,12 +354,12 @@ await fetch('http://localhost:8080/api/blacklist', {
 curl \
   --request PUT \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/blacklist/$id"
+  "http://localhost:8080/admin/blacklist/$id"
 #+END_SRC
 
 ********* fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/blacklist/${id}`, {
+await fetch(`http://localhost:8080/admin/blacklist/${id}`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -368,7 +368,7 @@ await fetch(`http://localhost:8080/api/blacklist/${id}`, {
 #+END_SRC
 
 ******* 移除黑名单
-=DELETE /api/blacklist/<id>=
+=DELETE /admin/blacklist/<id>=
 
 将特定频道从黑名单中移除.
 
@@ -378,12 +378,12 @@ await fetch(`http://localhost:8080/api/blacklist/${id}`, {
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/blacklist/$id"
+  "http://localhost:8080/admin/blacklist/$id"
 #+END_SRC
 
 ********* fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/blacklist/${id}`, {
+await fetch(`http://localhost:8080/admin/blacklist/${id}`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -393,7 +393,7 @@ await fetch(`http://localhost:8080/api/blacklist/${id}`, {
 
 ****** 白名单
 ******* 获取白名单
-=GET /api/whitelist=
+=GET /admin/whitelist=
 
 获取位于黑名单中的所有频道id, 返回JSON表示的字符串数组`string[]`.
 
@@ -402,12 +402,12 @@ await fetch(`http://localhost:8080/api/blacklist/${id}`, {
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIM_PASSWORD" \
-  "http://localhost:8080/api/whitelist"
+  "http://localhost:8080/admin/whitelist"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch('http://localhost:8080/api/whitelist', {
+await fetch('http://localhost:8080/admin/whitelist', {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -415,7 +415,7 @@ await fetch('http://localhost:8080/api/whitelist', {
 #+END_SRC
 
 ******* 添加白名单
-=PUT /api/whitelist/<id>=
+=PUT /admin/whitelist/<id>=
 
 将特定频道加入白名单.
 
@@ -425,12 +425,12 @@ await fetch('http://localhost:8080/api/whitelist', {
 curl \
   --request PUT \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/whitelist/$id"
+  "http://localhost:8080/admin/whitelist/$id"
 #+END_SRC
 
 ********* fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/whitelist/${id}`, {
+await fetch(`http://localhost:8080/admin/whitelist/${id}`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -439,7 +439,7 @@ await fetch(`http://localhost:8080/api/whitelist/${id}`, {
 #+END_SRC
 
 ******* 移除白名单
-=DELETE /api/whitelist/<id>=
+=DELETE /admin/whitelist/<id>=
 
 将特定频道从白名单中移除.
 
@@ -449,12 +449,12 @@ await fetch(`http://localhost:8080/api/whitelist/${id}`, {
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/whitelist/$id"
+  "http://localhost:8080/admin/whitelist/$id"
 #+END_SRC
 
 ********* fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/whitelist/${id}`, {
+await fetch(`http://localhost:8080/admin/whitelist/${id}`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -479,7 +479,7 @@ await fetch(`http://localhost:8080/api/whitelist/${id}`, {
 - token的意外泄露可以被迅速处理
 
 ****** 获取所有具有token策略的频道id
-=GET /api/pubsub-with-token-policies=
+=GET /admin/pubsub-with-token-policies=
 
 获取所有具有token策略的频道id, 返回由JSON表示的字符串数组 =string[]=.
 
@@ -488,16 +488,16 @@ await fetch(`http://localhost:8080/api/whitelist/${id}`, {
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub-with-token-policies"
+  "http://localhost:8080/admin/pubsub-with-token-policies"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch('http://localhost:8080/api/pubsub-with-token-policies')
+await fetch('http://localhost:8080/admin/pubsub-with-token-policies')
 #+END_SRC
 
 ****** 获取特定频道的token策略
-=GET /api/pubsub/<id>/token-policies=
+=GET /admin/pubsub/<id>/token-policies=
 
 返回JSON:
 #+BEGIN_SRC ts
@@ -513,12 +513,12 @@ await fetch('http://localhost:8080/api/pubsub-with-token-policies')
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub/$id/token-policies"
+  "http://localhost:8080/admin/pubsub/$id/token-policies"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fethc(`http://localhost:8080/api/pubsub/${id}/token-policies`, {
+await fethc(`http://localhost:8080/admin/pubsub/${id}/token-policies`, {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -526,8 +526,8 @@ await fethc(`http://localhost:8080/api/pubsub/${id}/token-policies`, {
 #+END_SRC
 
 ****** 设置token策略
-=PUT /api/pubsub/<id>/token-policies/write-token-required=
-=PUT /api/pubsub/<id>/token-policies/read-token-required=
+=PUT /admin/pubsub/<id>/token-policies/write-token-required=
+=PUT /admin/pubsub/<id>/token-policies/read-token-required=
 
 Payload必须是一个布尔值.
 
@@ -539,12 +539,12 @@ curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
   --header "Content-Type: application/json" \
   --data "$WRITE_TOKEN_REQUIRED" \
-  "http://localhost:8080/api/pubsub/$id/token-policies/write-token-required"
+  "http://localhost:8080/admin/pubsub/$id/token-policies/write-token-required"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/pubsub/${id}/token-policies/write-token-required`, {
+await fetch(`http://localhost:8080/admin/pubsub/${id}/token-policies/write-token-required`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -555,8 +555,8 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/token-policies/write-token-r
 #+END_SRC
 
 ****** 移除token策略
-=DELETE /api/pubsub/<id>/token-policies/write-token-required=
-=DELETE /api/pubsub/<id>/token-policies/read-token-required=
+=DELETE /admin/pubsub/<id>/token-policies/write-token-required=
+=DELETE /admin/pubsub/<id>/token-policies/read-token-required=
 
 ******* Example
 ******** curl
@@ -564,12 +564,12 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/token-policies/write-token-r
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub/$id/token-policies/write-token-required"
+  "http://localhost:8080/admin/pubsub/$id/token-policies/write-token-required"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/pubsub/${id}/token-policies/write-token-required`, {
+await fetch(`http://localhost:8080/admin/pubsub/${id}/token-policies/write-token-required`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -578,7 +578,7 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/token-policies/write-token-r
 #+END_SRC
 
 ****** 获取所有具有token的频道id
-=GET /api/pubsub-with-tokens=
+=GET /admin/pubsub-with-tokens=
 
 获取所有具有token的频道id, 返回由JSON表示的字符串数组 =string[]=.
 
@@ -587,12 +587,12 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/token-policies/write-token-r
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub-with-tokens"
+  "http://localhost:8080/admin/pubsub-with-tokens"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/pubsub-with-tokens`, {
+await fetch(`http://localhost:8080/admin/pubsub-with-tokens`, {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -600,7 +600,7 @@ await fetch(`http://localhost:8080/api/pubsub-with-tokens`, {
 #+END_SRC
 
 ****** 获取特定频道的所有token信息
-=GET /api/pubsub/<id>/tokens=
+=GET /admin/pubsub/<id>/tokens=
 
 获取特定频道的所有token信息, 返回JSON表示的token信息数组
 =Array<{ token: string, wirte: boolean, read: boolean }>=.
@@ -610,12 +610,12 @@ await fetch(`http://localhost:8080/api/pubsub-with-tokens`, {
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub/$id/tokens"
+  "http://localhost:8080/admin/pubsub/$id/tokens"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/pubsub/${id}/tokens`, {
+await fetch(`http://localhost:8080/admin/pubsub/${id}/tokens`, {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -623,7 +623,7 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/tokens`, {
 #+END_SRC
 
 ****** 为特定频道的token设置write权限
-=PUT /api/pubsub/<id>/tokens/<token>/write=
+=PUT /admin/pubsub/<id>/tokens/<token>/write=
 
 添加/更新token, 为token设置write权限.
 
@@ -633,12 +633,12 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/tokens`, {
 curl \
   --request PUT \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub/$id/tokens/$token/write"
+  "http://localhost:8080/admin/pubsub/$id/tokens/$token/write"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/pubsub/${id}/tokens/${token}/write`, {
+await fetch(`http://localhost:8080/admin/pubsub/${id}/tokens/${token}/write`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -647,7 +647,7 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/tokens/${token}/write`, {
 #+END_SRC
 
 ****** 取消特定频道的token的write权限
-=DELETE /api/pubsub/<id>/tokens/<token>/write=
+=DELETE /admin/pubsub/<id>/tokens/<token>/write=
 
 取消token的write权限.
 
@@ -657,12 +657,12 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/tokens/${token}/write`, {
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub/$id/tokens/$token/write"
+  "http://localhost:8080/admin/pubsub/$id/tokens/$token/write"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/pubsub/${id}/tokens/${token}/write`, {
+await fetch(`http://localhost:8080/admin/pubsub/${id}/tokens/${token}/write`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -671,7 +671,7 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/tokens/${token}/write`, {
 #+END_SRC
 
 ****** 为特定频道的token设置read权限
-=PUT /api/pubsub/<id>/tokens/<token>/read=
+=PUT /admin/pubsub/<id>/tokens/<token>/read=
 
 添加/更新token, 为token设置read权限.
 
@@ -681,12 +681,12 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/tokens/${token}/write`, {
 curl \
   --request PUT \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub/$id/tokens/$token/read"
+  "http://localhost:8080/admin/pubsub/$id/tokens/$token/read"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/pubsub/${id}/tokens/${token}/read`, {
+await fetch(`http://localhost:8080/admin/pubsub/${id}/tokens/${token}/read`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -695,7 +695,7 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/tokens/${token}/read`, {
 #+END_SRC
 
 ****** 取消特定频道的token的read权限
-=DELETE /api/pubsub/<id>/tokens/<token>/read=
+=DELETE /admin/pubsub/<id>/tokens/<token>/read=
 
 取消token的read权限.
 
@@ -705,12 +705,12 @@ await fetch(`http://localhost:8080/api/pubsub/${id}/tokens/${token}/read`, {
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/pubsub/$id/tokens/$token/read"
+  "http://localhost:8080/admin/pubsub/$id/tokens/$token/read"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/pubsub/${id}/tokens/${token}/read`, {
+await fetch(`http://localhost:8080/admin/pubsub/${id}/tokens/${token}/read`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
