--- a/README.org
+++ b/README.org
@@ -1,8 +1,6 @@
 * PubSub
 一个受[[https://patchbay.pub/][patchbay]], [[https://smee.io/][smee.io]], [[https://github.com/sensiblecodeio/hookbot][hookbot]]启发的Web友好的自托管ad-hoc微服务,
-提供基于 HTTP, SSE 和 WebSocket 的 PubSub 功能,
-带有基于token和名单的访问控制策略,
-支持JSON Schema.
+提供基于 HTTP, SSE 和 WebSocket 的 PubSub 功能.
 
 受原理所限, 此服务不能实现消息的可靠传递(reliable delivery), 也无法重发消息.
 因此当遭遇网络故障时, 消息可能会丢失.
@@ -85,11 +83,6 @@ services:
   pubsub:
     image: 'blackglory/pubsub'
     restart: always
-    environment:
-      - PUBSUB_ADMIN_PASSWORD=password
-      - PUBSUB_TOKEN_BASED_ACCESS_CONTROL=true
-      - PUBSUB_READ_TOKEN_REQUIRED=true
-      - PUBSUB_WRITE_TOKEN_REQUIRED=true
     volumes:
       - 'pubsub-data:/data'
     ports:
@@ -195,523 +188,6 @@ ws.addEventListener('message', event => {
     console.log(event.data);
 })
 #+END_SRC
-
-*** Private
-**** JSON Schema验证
-通过设置环境变量 =PUBSUB_JSON_VALIDATION=true= 可开启publish的JSON Schema验证功能.
-任何带有 =Content-Type: application/json= 的请求都会被验证,
-即使没有设置JSON Schema, 也会拒绝不合法的JSON文本.
-JSON验证仅用于验证, 不会重新序列化消息, 因此subscribe得到的消息会与publish发送的消息相同.
-
-在开启验证功能的情况下, 通过环境变量 =PUBSUB_DEFAULT_JSON_SCHEMA= 可设置默认的JSON Schema,
-该验证仅对带有 =Content-Type: application/json= 的请求有效.
-
-通过设置环境变量 =PUBSUB_JSON_PAYLOAD_ONLY=true=,
-可以强制enqueue只接受带有 =Content-Type: application/json= 的请求.
-此设置在未开启JSON Schema验证的情况下也有效, 但在这种情况下服务器能够接受不合法的JSON.
-
-***** 单独为namespace设置JSON Schema
-可单独为namespace设置JSON Schema, 被设置的namespace将仅接受`Content-Type: application/json`请求.
-
-****** 获取所有具有JSON Schema的频道namespace
-=GET /admin/pubsub-with-json-schema=
-
-获取所有具有JSON Schema的频道namespace, 返回由JSON表示的字符串数组 =string[]=.
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub-with-json-schema"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch('http://localhost:8080/admin/pubsub-with-json-schema', {
-  headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-}).then(res => res.json())
-#+END_SRC
-
-****** 获取JSON Schema
-=GET /admin/pubsub/<namespace>/json-schema=
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub/$namespace/json-schema"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/pubsub/${namespace}/json-schema`, {
-  headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-}).then(res => res.json())
-#+END_SRC
-
-****** 设置JSON Schema
-=PUT /admin/pubsub/<namespace>/json-schema=
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --request PUT \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  --header "Content-Type: application/json" \
-  --data "$JSON_SCHEMA" \
-  "http://localhost:8080/admin/pubsub/$namespace/json-schema"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/pubsub/${namespace}/json-schema`, {
-  method: 'PUT'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-    'Content-Type': 'application/json'
-  }
-, body: JSON.stringify(jsonSchema)
-})
-#+END_SRC
-
-****** 移除JSON Schema
-=DELETE /admin/pubsub/<namespace>/json-schema=
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --request DELETE \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub/$namespace/json-schema"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/pubsub/${namespace}/json-schema`, {
-  method: 'DELETE'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-})
-#+END_SRC
-
-**** 访问控制
-PubSub提供两种访问控制策略, 可以一并使用.
-
-所有访问控制API都使用基于口令的Bearer Token Authentication.
-口令需通过环境变量 =PUBSUB_ADMIN_PASSWORD= 进行设置.
-
-访问控制规则是通过[[https://www.sqlite.org/wal.html][WAL模式]]的SQLite3持久化的, 开启访问控制后,
-服务器的吞吐量和响应速度会受到硬盘性能的影响.
-
-已经打开的连接不会受到新的访问控制规则的影响.
-
-***** 基于名单的访问控制
-通过设置环境变量 =PUBSUB_LIST_BASED_ACCESS_CONTROL= 开启基于名单的访问控制:
-- =whitelist=
-  启用基于频道白名单的访问控制, 只有在名单内的频道允许被访问.
-- =blacklist=
-  启用基于频道黑名单的访问控制, 只有在名单外的频道允许被访问.
-
-****** 黑名单
-******* 获取黑名单
-=GET /admin/blacklist=
-
-获取位于黑名单中的所有频道namespace, 返回JSON表示的字符串数组 =string[]=.
-
-******** Example
-********* curl
-#+BEGIN_SRC sh
-curl \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/blacklist"
-#+END_SRC
-
-********* fetch
-#+BEGIN_SRC js
-await fetch('http://localhost:8080/admin/blacklist', {
-  headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-}).then(res => res.json())
-#+END_SRC
-
-******* 添加黑名单
-=PUT /admin/blacklist/<namespace>=
-
-将特定频道加入黑名单.
-
-******** Example
-********* curl
-#+BEGIN_SRC sh
-curl \
-  --request PUT \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/blacklist/$namespace"
-#+END_SRC
-
-********* fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/blacklist/${namespace}`, {
-  method: 'PUT'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-})
-#+END_SRC
-
-******* 移除黑名单
-=DELETE /admin/blacklist/<namespace>=
-
-将特定频道从黑名单中移除.
-
-******** Example
-********* curl
-#+BEGIN_SRC sh
-curl \
-  --request DELETE \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/blacklist/$namespace"
-#+END_SRC
-
-********* fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/blacklist/${namespace}`, {
-  method: 'DELETE'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-})
-#+END_SRC
-
-****** 白名单
-******* 获取白名单
-=GET /admin/whitelist=
-
-获取位于黑名单中的所有频道namespace, 返回JSON表示的字符串数组 =string[]=.
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --header "Authorization: Bearer $ADMIM_PASSWORD" \
-  "http://localhost:8080/admin/whitelist"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch('http://localhost:8080/admin/whitelist', {
-  headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-}).then(res => res.json())
-#+END_SRC
-
-******* 添加白名单
-=PUT /admin/whitelist/<namespace>=
-
-将特定频道加入白名单.
-
-******** Example
-********* curl
-#+BEGIN_SRC sh
-curl \
-  --request PUT \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/whitelist/$namespace"
-#+END_SRC
-
-********* fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/whitelist/${namespace}`, {
-  method: 'PUT'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-})
-#+END_SRC
-
-******* 移除白名单
-=DELETE /admin/whitelist/<namespace>=
-
-将特定频道从白名单中移除.
-
-******** Example
-********* curl
-#+BEGIN_SRC sh
-curl \
-  --request DELETE \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/whitelist/$namespace"
-#+END_SRC
-
-********* fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/whitelist/${namespace}`, {
-  method: 'DELETE'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-})
-#+END_SRC
-
-***** 基于token的访问控制
-对token的要求: =^[a-zA-Z0-9\.\-_]{1,256}$=
-
-通过设置环境变量 =PUBSUB_TOKEN_BASED_ACCESS_CONTROL=true= 开启基于token的访问控制.
-
-基于token的访问控制将根据消息队列的token access policy决定其访问规则.
-可通过环境变量 =PUBSUB_WRITE_TOKEN_REQUIRED=, =PUBSUB_READ_TOKEN_REQUIRED= 设置相关默认值,
-未设置情况下为 =false=.
-
-一个消息队列可以有多个token, 每个token可以单独设置write和read权限, 不同消息队列的token不共用.
-
-基于token的访问控制作出以下假设
-- token的传输过程是安全的
-- token难以被猜测
-- token的意外泄露可以被迅速处理
-
-****** 获取所有具有token策略的频道namespace
-=GET /admin/pubsub-with-token-policies=
-
-获取所有具有token策略的频道namespace, 返回由JSON表示的字符串数组 =string[]=.
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub-with-token-policies"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch('http://localhost:8080/admin/pubsub-with-token-policies')
-#+END_SRC
-
-****** 获取特定频道的token策略
-=GET /admin/pubsub/<namespace>/token-policies=
-
-返回JSON:
-#+BEGIN_SRC ts
-{
-  writeTokenRequired: boolean | null
-  readTokenRequired: boolean | null
-}
-#+END_SRC
-=null= 代表沿用相关默认值.
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub/$namespace/token-policies"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fethc(`http://localhost:8080/admin/pubsub/${namespace}/token-policies`, {
-  headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-}).then(res => res.json())
-#+END_SRC
-
-****** 设置token策略
-=PUT /admin/pubsub/<namespace>/token-policies/write-token-required=
-=PUT /admin/pubsub/<namespace>/token-policies/write-token-required"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/pubsub/${namespace}/token-policies/write-token-required`, {
-  method: 'PUT'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  , 'Content-Type': 'application/json'
-  }
-, body: JSON.stringify(writeTokenRequired)
-})
-#+END_SRC
-
-****** 移除token策略
-=DELETE /admin/pubsub/<namespace>/token-policies/write-token-required=
-=DELETE /admin/pubsub/<namespace>/token-policies/read-token-required=
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --request DELETE \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub/$namespace/token-policies/write-token-required"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/pubsub/${namespace}/token-policies/write-token-required`, {
-  method: 'DELETE'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-})
-#+END_SRC
-
-****** 获取所有具有token的频道namespace
-=GET /admin/pubsub-with-tokens=
-
-获取所有具有token的频道namespace, 返回由JSON表示的字符串数组 =string[]=.
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub-with-tokens"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/pubsub-with-tokens`, {
-  headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-}).then(res => res.json())
-#+END_SRC
-
-****** 获取特定频道的所有token信息
-=GET /admin/pubsub/<namespace>/tokens=
-
-获取特定频道的所有token信息, 返回JSON表示的token信息数组
-=Array<{ token: string, wirte: boolean, read: boolean }>=.
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub/$namespace/tokens"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/pubsub/${namespace}/tokens`, {
-  headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-}).then(res => res.json())
-#+END_SRC
-
-****** 为特定频道的token设置write权限
-=PUT /admin/pubsub/<namespace>/tokens/<token>/write=
-
-添加/更新token, 为token设置write权限.
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --request PUT \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub/$namespace/tokens/$token/write"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/pubsub/${namespace}/tokens/${token}/write`, {
-  method: 'PUT'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-})
-#+END_SRC
-
-****** 取消特定频道的token的write权限
-=DELETE /admin/pubsub/<namespace>/tokens/<token>/write=
-
-取消token的write权限.
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --request DELETE \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub/$namespace/tokens/$token/write"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/pubsub/${namespace}/tokens/${token}/write`, {
-  method: 'DELETE'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-})
-#+END_SRC
-
-****** 为特定频道的token设置read权限
-=PUT /admin/pubsub/<namespace>/tokens/<token>/read=
-
-添加/更新token, 为token设置read权限.
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --request PUT \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub/$namespace/tokens/$token/read"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/pubsub/${namespace}/tokens/${token}/read`, {
-  method: 'PUT'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-})
-#+END_SRC
-
-****** 取消特定频道的token的read权限
-=DELETE /admin/pubsub/<namespace>/tokens/<token>/read=
-
-取消token的read权限.
-
-******* Example
-******** curl
-#+BEGIN_SRC sh
-curl \
-  --request DELETE \
-  --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/admin/pubsub/$namespace/tokens/$token/read"
-#+END_SRC
-
-******** fetch
-#+BEGIN_SRC js
-await fetch(`http://localhost:8080/admin/pubsub/${namespace}/tokens/${token}/read`, {
-  method: 'DELETE'
-, headers: {
-    'Authorization': `Bearer ${adminPassword}`
-  }
-})
-#+END_SRC
-
-** 限制Payload大小
-设置环境变量 =PUBSUB_PAYLOAD_LIMIT= 可限制服务接受的单个请求的Payload字节数, 默认值为1048576(1MB).
-
-设置环境变量 =PUBSUB_PUBLISH_PAYLOAD_LIMIT= 可限制publish接受的单个请求Payload字节数,
-默认值继承自 =PUBSUB_PAYLOAD_LIMIT=.
 
 ** Webhook
 PubSub的publish端点可用于Webhook,
